Aerospace figure update.

--- a/aerospace/aerospace.tex
+++ b/aerospace/aerospace.tex
@@ -1,5 +1,5 @@
 \documentclass[]{article}
-\usepackage{amsmath, wasysym, tikz, subfigure, graphicx, cmbright}
+\usepackage{amsmath, wasysym, tikz, subfigure, graphicx, cmbright, pgfplots}
 
 %opening
 \title{}
@@ -12,6 +12,11 @@
 	\tikzsetnextfilename{#1}%
 	\input{#1.tex}%
 }
+
+\usetikzlibrary{calc,trees,positioning,arrows,chains,shapes.geometric,%
+	decorations.pathreplacing,decorations.pathmorphing,shapes,%
+	matrix,shapes.symbols, positioning,fit,calc, angles, quotes, patterns,%
+	decorations.text}
 
 \begin{document}
 	
@@ -29,61 +34,39 @@
 
 	\begin{figure}
 		\centering
-		\begin{tikzpicture}
-		
-		\tikzset{
-			%Define standard arrow tip
-			>=stealth',
-			%Define style for boxes
-			punkt/.style={
-				rectangle,
-				rounded corners,
-				draw=black, very thick,
-				text width=6.5em,
-				minimum height=2em,
-				text centered},
-			% Define arrow style
-			pil/.style={
-				thick,
-				shorten <=2pt,
-				shorten >=2pt,},
-			punktnob/.style={
-				text width=6.5em,
-				minimum height=2em}
-		}
-		
-		%nodes
-		\def \sep {0.5cm};
-		\def \rsep {1.6}
-		
-		\node[punkt] (horizon) {Local (Topocentric Horizon)};
-		
-		\node[below=\sep of horizon] (dummy1) {};
-		
-		\node[punktnob, right = \rsep of dummy1] (tf1) {\small{latitude, longitude, height, azimuth, elevation, range}};
-		
-		\draw[decorate, decoration={brace, mirror}] let \p1=(tf1.north), \p2=(tf1.south) in
-		($(\rsep+0.2, \y1)$) -- ($(\rsep+0.2, \y2)$) ;
-		
-		\node[punkt, inner sep=5pt,below=\sep of dummy1] (earth) {Earth-Fixed (ECEF) } edge[pil, <->] (horizon.south);
-		
-		\node[below=\sep of earth] (dummy2) {};
-		
-		\node[punktnob, right = \rsep of dummy2] (tf2) {\small{JDN, epoch}};
-		
-		\draw[decorate, decoration={brace, mirror}] let \p1=(tf2.north), \p2=(tf2.south) in
-		($(\rsep+0.2, \y1)$) -- ($(\rsep+0.2, \y2)$) ;    
-		
-		\node[punkt, inner sep=5pt,below=\sep of dummy2] (space) {Space-Fixed (ECI)} edge[pil, <->] (earth.south);
-		
-		\draw [thick] (0,-1.3) -- (1.7,-1.3);
-		\draw [thick] (0,-3.63) -- (1.7,-3.63);
-		
-		\end{tikzpicture}
+		\includetikz{tikz/transformation_workflow}
 		\caption{Transformation workflow}
 		\label{fig:tfdiagram}
 	\end{figure}
 
+	\begin{figure}
+		\centering
+		\includetikz{tikz/scenario_one}
+		\caption{Scenario}
+	\end{figure}
 
+	\begin{figure}
+		\centering
+		\includetikz{tikz/scenario_two}
+		\caption{Scenario}
+	\end{figure}
+	
+	\begin{figure}
+		\centering
+		\includetikz{tikz/scenario_three}
+		\caption{Scenario}
+	\end{figure}
 
+	\begin{figure}
+		\centering
+		\includetikz{tikz/scenario_four}
+		\caption{Scenario}
+	\end{figure}
+	
+	\begin{figure}
+		\centering
+		\includetikz{tikz/cfar}
+		\caption{Scenario}
+	\end{figure}
+	
 \end{document}
